@@ -17,6 +17,10 @@ glibc (2.19-11) UNRELEASED; urgency=medium
     conffiles /etc/ld.so.conf.d/i486-{kfreebsd-gnu.conf,gnu-gnu.conf,gnu.conf}.
     Closes: #759568.
 
+  [ Petr Salinger ]
+  * kfreebsd/local-fbtl.diff: update to revision 5520 (from glibc-bsd).
+    Fixes x87 precision mode in newly created pthreads. Closes: #761175.
+
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 27 Aug 2014 08:22:41 +0200
 
 glibc (2.19-10) unstable; urgency=medium
